[package]
name = "cpypst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.3.0"


[[bin]]
name = "cpy"
path = "src/main.rs"

[[bin]]
name = "pst"
path = "src/main.rs"

[profile.release]
lto = true
strip = "debuginfo"
